refactor: change the structure of EntityRest